Fix interface shifting on page refresh

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -31,6 +31,7 @@ body {
       @include flex-column;
       height: 100%;
       width: 90vw;
+      content-visibility: auto;
 
       .screen-results {
         opacity: 1;
